test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/plx1_data_loop_decl.plx
pub fn main(none) i32 {
    x: i32 = 0

    loop data i: i32 = 0 while i < 10 .. i = i + 1 {
        x = x + 1
    }

    return x
}
